src/test/ui/span/issue-36537.stderr
error[E0597]: `a` does not live long enough
  --> $DIR/issue-36537.rs:5:14
   |
LL |         p = &a;
   |              ^ borrowed value does not live long enough
...
LL |     }
   |     - `a` dropped here while still borrowed
...
LL | }
   | - borrowed value needs to live until here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
